add markdown table generator

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/flip-art/">Flip Art</a>
             <a class="list-group-item list-group-item-action" href="intermediate/github-profiles/">GitHub Profiles</a>
             <a class="list-group-item list-group-item-action" href="intermediate/highstriker/">HighStriker</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/markdown-table-generator/">Markdown Table Generator</a>
         </div>
     </div>
 </body>
