add math editor

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/github-profiles/">GitHub Profiles</a>
             <a class="list-group-item list-group-item-action" href="intermediate/highstriker/">HighStriker</a>
             <a class="list-group-item list-group-item-action" href="intermediate/markdown-table-generator/">Markdown Table Generator</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/math-editor/">Math Editor</a>
         </div>
     </div>
 </body>
