--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/markdown-table-generator/">Markdown Table Generator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/math-editor/">Math Editor</a>
             <a class="list-group-item list-group-item-action" href="intermediate/meme-generator/">Meme Generator</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/password-generator/">Password Generator</a>
         </div>
     </div>
 </body>
