add qrcode badge generator

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/math-editor/">Math Editor</a>
             <a class="list-group-item list-group-item-action" href="intermediate/meme-generator/">Meme Generator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/password-generator/">Password Generator</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/qrcode-badge-generator/">QRCode Badge Generator</a>
         </div>
     </div>
 </body>
