--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/password-generator/">Password Generator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/qrcode-badge-generator/">QRCode Badge Generator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/regular-expression-helper/">Regular Expression Helper</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/sales-reciepts/">Sales Reciepts</a>
         </div>
     </div>
 </body>
