add simple online store

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/qrcode-badge-generator/">QRCode Badge Generator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/regular-expression-helper/">Regular Expression Helper</a>
             <a class="list-group-item list-group-item-action" href="intermediate/sales-reciepts/">Sales Reciepts</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/simple-online-store/">Simple Online Store</a>
         </div>
     </div>
 </body>
