add sport bracket generator

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/regular-expression-helper/">Regular Expression Helper</a>
             <a class="list-group-item list-group-item-action" href="intermediate/sales-reciepts/">Sales Reciepts</a>
             <a class="list-group-item list-group-item-action" href="intermediate/simple-online-store/">Simple Online Store</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/sports-bracket-generator/">Sports Bracket Generator</a>
         </div>
     </div>
 </body>
