--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/sales-reciepts/">Sales Reciepts</a>
             <a class="list-group-item list-group-item-action" href="intermediate/simple-online-store/">Simple Online Store</a>
             <a class="list-group-item list-group-item-action" href="intermediate/sports-bracket-generator/">Sports Bracket Generator</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/string-art/">String Art</a>
         </div>
     </div>
 </body>
