--- a/index.html
+++ b/index.html
@@ -11,64 +11,64 @@
         <h1 class="text-center my-4">App Ideas</h1>
         <h2 class="text-center mb-4">Tier-1: Beginner Projects</h2>
         <div class="list-group my-4">
-            <a class="list-group-item list-group-item-action" href="beginner/bin2dec/">Bin2Dec</a>
-            <a class="list-group-item list-group-item-action" href="beginner/border-radius-previewer/">Border Radius Previewer</a>
-            <a class="list-group-item list-group-item-action" href="beginner/calculator/">Calculator</a>
-            <a class="list-group-item list-group-item-action" href="beginner/cause-effect/">Cause & Effect</a>
-            <a class="list-group-item list-group-item-action" href="beginner/christmas-lights/">Christmas Lights</a>
-            <a class="list-group-item list-group-item-action" href="beginner/color-cycle/">Color Cycle</a>
-            <a class="list-group-item list-group-item-action" href="beginner/countdown-timer/">Countdown Timer</a>
-            <a class="list-group-item list-group-item-action" href="beginner/dollars-to-cents/">Dollars to Cents</a>
-            <a class="list-group-item list-group-item-action" href="beginner/dynamic-css-variables/">Dynamic CSS Variables</a>
-            <a class="list-group-item list-group-item-action" href="beginner/first-db/">First DB</a>
-            <a class="list-group-item list-group-item-action" href="beginner/flip-image/">Flip Image</a>
-            <a class="list-group-item list-group-item-action" href="beginner/github-status/">Github Status</a>
-            <a class="list-group-item list-group-item-action" href="beginner/hello/">Hello</a>
-            <a class="list-group-item list-group-item-action" href="beginner/iot-mailbox/">IOT Mailbox</a>
-            <a class="list-group-item list-group-item-action" href="beginner/javascript-validation-with-regex/">Javascript Validation with Regex</a>
-            <a class="list-group-item list-group-item-action" href="beginner/json2csv/">JSON to CSV</a>
-            <a class="list-group-item list-group-item-action" href="beginner/key-value/">Key Value</a>
-            <a class="list-group-item list-group-item-action" href="beginner/lorem-ipsum-generator/">Lorem Ipsum Generator</a>
-            <a class="list-group-item list-group-item-action" href="beginner/notes/">Notes</a>
-            <a class="list-group-item list-group-item-action" href="beginner/pearson-regression/">Pearson Regression</a>
-            <a class="list-group-item list-group-item-action" href="beginner/pomodoro-clock/">Pomodoro Clock</a>
-            <a class="list-group-item list-group-item-action" href="beginner/product-landing-page/">Product Landing Page</a>
-            <a class="list-group-item list-group-item-action" href="beginner/quiz/">Quiz</a>
-            <a class="list-group-item list-group-item-action" href="beginner/random-meal-generator/">Random Meal Generator</a>
-            <a class="list-group-item list-group-item-action" href="beginner/recipe/">Recipe</a>
-            <a class="list-group-item list-group-item-action" href="beginner/roman-to-decimal-converter/">Roman to Decimal Converter</a>
-            <a class="list-group-item list-group-item-action" href="beginner/slider-design/">Slider Design</a>
-            <a class="list-group-item list-group-item-action" href="beginner/stopwatch/">Stopwatch</a>
-            <a class="list-group-item list-group-item-action" href="beginner/true-or-false/">True or False</a>
-            <a class="list-group-item list-group-item-action" href="beginner/vigenere-cipher/">Vigenère Cipher</a>
-            <a class="list-group-item list-group-item-action" href="beginner/weather/">Weather</a>
-            <a class="list-group-item list-group-item-action" href="beginner/windchill/">Windchill</a>
-            <a class="list-group-item list-group-item-action" href="beginner/word-frequency/">Word Frequency</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/bin2dec/">Bin2Dec</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/border-radius-previewer/">Border Radius Previewer</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/calculator/">Calculator</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/cause-effect/">Cause & Effect</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/christmas-lights/">Christmas Lights</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/color-cycle/">Color Cycle</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/countdown-timer/">Countdown Timer</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/dollars-to-cents/">Dollars to Cents</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/dynamic-css-variables/">Dynamic CSS Variables</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/first-db/">First DB</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/flip-image/">Flip Image</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/github-status/">Github Status</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/hello/">Hello</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/iot-mailbox/">IOT Mailbox</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/javascript-validation-with-regex/">Javascript Validation with Regex</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/json2csv/">JSON to CSV</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/key-value/">Key Value</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/lorem-ipsum-generator/">Lorem Ipsum Generator</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/notes/">Notes</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/pearson-regression/">Pearson Regression</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/pomodoro-clock/">Pomodoro Clock</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/product-landing-page/">Product Landing Page</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/quiz/">Quiz</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/random-meal-generator/">Random Meal Generator</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/recipe/">Recipe</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/roman-to-decimal-converter/">Roman to Decimal Converter</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/slider-design/">Slider Design</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/stopwatch/">Stopwatch</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/true-or-false/">True or False</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/vigenere-cipher/">Vigenère Cipher</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/weather/">Weather</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/windchill/">Windchill</a>
+            <a class="list-group-item list-group-item-action" href="1-beginner/word-frequency/">Word Frequency</a>
         </div>
 
         <h2 class="text-center mb-4">Tier-2: Intermediate Projects</h2>
         <div class="list-group my-4">
-            <a class="list-group-item list-group-item-action" href="intermediate/bit-masks/">Bit Masks</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/book-finder/">Book Finder</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/calculator-cli/">Calculator CLI</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/card-memory-game/">Card Memory Game</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/charity-finder/">Charity Finder</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/drawing/">Drawing</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/emoji-translator/">Emoji Translator</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/flashcards/">FlashCards</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/flip-art/">Flip Art</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/github-profiles/">GitHub Profiles</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/highstriker/">HighStriker</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/markdown-table-generator/">Markdown Table Generator</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/math-editor/">Math Editor</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/meme-generator/">Meme Generator</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/password-generator/">Password Generator</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/qrcode-badge-generator/">QRCode Badge Generator</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/regular-expression-helper/">Regular Expression Helper</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/sales-reciepts/">Sales Reciepts</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/simple-online-store/">Simple Online Store</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/sports-bracket-generator/">Sports Bracket Generator</a>
-            <a class="list-group-item list-group-item-action" href="intermediate/string-art/">String Art</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/bit-masks/">Bit Masks</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/book-finder/">Book Finder</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/calculator-cli/">Calculator CLI</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/card-memory-game/">Card Memory Game</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/charity-finder/">Charity Finder</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/drawing/">Drawing</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/emoji-translator/">Emoji Translator</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/flashcards/">FlashCards</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/flip-art/">Flip Art</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/github-profiles/">GitHub Profiles</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/highstriker/">HighStriker</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/markdown-table-generator/">Markdown Table Generator</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/math-editor/">Math Editor</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/meme-generator/">Meme Generator</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/password-generator/">Password Generator</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/qrcode-badge-generator/">QRCode Badge Generator</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/regular-expression-helper/">Regular Expression Helper</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/sales-reciepts/">Sales Reciepts</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/simple-online-store/">Simple Online Store</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/sports-bracket-generator/">Sports Bracket Generator</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/string-art/">String Art</a>
         </div>
     </div>
 </body>
