--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <a class="list-group-item list-group-item-action" href="2-intermediate/simple-online-store/">Simple Online Store</a>
             <a class="list-group-item list-group-item-action" href="2-intermediate/sports-bracket-generator/">Sports Bracket Generator</a>
             <a class="list-group-item list-group-item-action" href="2-intermediate/string-art/">String Art</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/this-or-that-game/">This or That Game</a>
         </div>
     </div>
 </body>
