--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <a class="list-group-item list-group-item-action" href="2-intermediate/sports-bracket-generator/">Sports Bracket Generator</a>
             <a class="list-group-item list-group-item-action" href="2-intermediate/string-art/">String Art</a>
             <a class="list-group-item list-group-item-action" href="2-intermediate/this-or-that-game/">This or That Game</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/to-do-app/">To Do App</a>
         </div>
     </div>
 </body>
