add typing practice

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <a class="list-group-item list-group-item-action" href="2-intermediate/string-art/">String Art</a>
             <a class="list-group-item list-group-item-action" href="2-intermediate/this-or-that-game/">This or That Game</a>
             <a class="list-group-item list-group-item-action" href="2-intermediate/to-do-app/">To Do App</a>
+            <a class="list-group-item list-group-item-action" href="2-intermediate/typing-practice/">Typing Practice</a>
         </div>
     </div>
 </body>
